<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:weightSum="4"
    android:background="@color/monRouge">

    <ImageView
        android:id="@+id/imagepatisserie"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/image"
        android:src="@drawable/ico_eclair"
        android:background="@color/white"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/nom"
            android:textSize="@dimen/policenom"
            tools:ignore="NestedWeights"
            android:background="@color/monOrange"/>

        <TextView
            android:id="@+id/prix"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/prix"
            android:textSize="@dimen/policeprix"
            android:background="@color/monJaune"/>
    </LinearLayout>

</LinearLayout>